Задание 7. Добавлена операция получения счетов, доступных клиенту для открытия (#23)
* Обновлён контракт Backend Service до версии 2.0.0

* Добавлена операция создания нового клиента версии 2

* Добавлены тесты на операцию создания нового клиента версии 2

* В контракт Middle Service добавлена операция создания нового клиента версии 2

* Добавлены автоматически сгенерированные бейджи JaCoCo Test Coverage

* В README обновлена ссылка на контракт Middle Service

* Задание 7. В контракт Middle Service добавлены операции getAvailableAccounts и createClientAccount

* Задание 7. Добавлена операция получения счетов, доступных для открытия

* Добавлены автоматически сгенерированные бейджи JaCoCo Test Coverage

* Задание 7. Добавлена конфигурация с доступными для открытия счетами

* Добавлены автоматически сгенерированные бейджи JaCoCo Test Coverage

* Задание 7. Исправлен тип счёта с публичного на приватный

* Задание 7. Добавлен тест

* Добавлены автоматически сгенерированные бейджи JaCoCo Test Coverage

---------
