# src/main/resources/openapi/middle-service.yaml
@@ -2,7 +2,7 @@ openapi: 3.1.0
 
 info:
   title: GPB IT Factory Mini-Bank Middle Service API
-  version: 0.0.2
+  version: 0.1.0
 
 servers:
   - url: http://localhost:8081/api
@@ -11,9 +11,9 @@ paths:
   /v1/clients:
     post:
       operationId: createNewClient
-      summary: Создание нового клиента
+      summary: Создать нового клиента
       deprecated: true
-      tags: [clients]
+      tags: [ clients ]
       requestBody:
         required: true
         content:
@@ -36,7 +36,7 @@ paths:
   /v2/clients:
     post:
       operationId: createNewClientV2
-      summary: Создание нового клиента
+      summary: Создать нового клиента
       tags: [ clients ]
       requestBody:
         required: true
@@ -51,6 +51,58 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CreateClientResponse'
+        default:
+          description: Непредвиденная ошибка
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /v1/clients/{telegramId}/accounts:
+    post:
+      operationId: createClientAccount
+      summary: Открыть новый счёт для клиента
+      tags: [ accounts ]
+      parameters:
+        - $ref: '#/components/parameters/telegramId'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAccountRequest'
+      responses:
+        200:
+          description: Счёт успешно открыт
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateAccountResponse'
+        422:
+          description: В запросе содержится недопустимый контент
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Непредвиденная ошибка
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /v1/accounts:
+    get:
+      operationId: getAvailableAccounts
+      summary: Получить счета, доступные для открытия
+      tags: [ accounts ]
+      responses:
+        200:
+          description: Список счетов доступных для открытия
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AccountResponse'
         default:
           description: Непредвиденная ошибка
           content:
@@ -88,14 +140,61 @@ components:
       required:
         - telegramUserId
         - telegramUserName
+    CreateAccountRequest:
+      type: object
+      description: Запрос на создание нового счёта
+      properties:
+        accountName:
+          type: string
+          examples:
+           - Акционный
     CreateClientResponse:
       type: object
-      description: Информация о клиенте
+      description: Информация о успешной регистрации клиента
       properties:
         message:
           type: string
           examples:
             - Клиент успешно зарегистрирован
+    CreateAccountResponse:
+      type: object
+      description: Информация о успешном открытии счёта для клиента
+      properties:
+        message:
+          type: string
+          examples:
+            - Счёт успешно открыт
+    AccountResponse:
+      type: object
+      description: Список счетов, доступных для открытия
+      properties:
+        name:
+          type: string
+          examples:
+            - Акционный
+        description:
+          type: string
+          examples:
+            - Счёт для новых клиентов
+        initAmount:
+          type: number
+          format: double
+          examples:
+            - 1000
+        type:
+          type: string
+          enum:
+            - common
+            - promo
+            - default
+          description: >
+            Типы счетов:
+             * `common` - Стандартный счёт, рекомендуется открывать уже существующим клиентам
+             * `promo` - Акционный счёт, рекомендуется отрывать новым клиентам
+             * `default` - Счёт, который открывается по-умолчанию для новых клиентов, если сейчас не проходит ни каких акций
+      required:
+        - name
+        - type
     ErrorResponse:
       type: object
       description: Формат непредвиденной ошибки
@@ -117,6 +216,17 @@ components:
           format: uuid
           examples:
             - 5f59e024-03c7-498d-9fc9-b8b15fd49c47
+  parameters:
+    telegramId:
+      name: telegramId
+      in: path
+      description: Идентификатор пользователя в Telegram
+      required: true
+      schema:
+        type: integer
+        format: int64
+        examples:
+          - 356789
 
 tags:
   - name: clients
